# driftshield

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
driftshield/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
driftshield/data/: signature-benchmark.jsonl
driftshield/docker/: .env.example  entrypoint.sh  seed.py
driftshield/docker/fixtures/: sample_claude_code_session.jsonl
driftshield/docs/: behaviour-events.md  dogfood-corpus.md  dogfood-flow-matrix.md  redactor-v2.md  supported-sources.md  telemetry.md
driftshield/docs/plans/: 2025-02-13-cli-implementation.md  2025-02-13-cli-tool-design.md
driftshield/frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
driftshield/frontend/src/: App.tsx  index.css  main.tsx
driftshield/frontend/src/api/: client.ts  graveyard.ts  reports.ts  sessions.ts
driftshield/frontend/src/pages/: InvestigationPage.tsx  ReportsPage.tsx  SessionListPage.tsx
driftshield/frontend/src/types/: graph.ts  (+2 more)
driftshield/metrics/: signature-benchmark.json
driftshield/migrations/: Dockerfile  README.md  lambda_handler.py
driftshield/src/driftshield/: __init__.py  intake_contract.py  public.py  recursive_redactor.py  remote_submission.py  remote_upload.py
driftshield/tests/: __init__.py  test_community_signature_pack.py  test_intake_contract.py  test_public_analyse.py  test_recursive_redactor.py  test_redaction_roundtrip.py  test_remote_submission.py  test_remote_upload.py  test_scenarios.py  test_signatures_public_api.py
driftshield/tests/api/: test_auth.py  test_behaviour.py  test_connectors.py  test_dashboard.py  test_dogfood_flow_matrix.py  test_graph.py  test_health.py  test_ingest.py  test_reports.py  test_schemas.py  test_sessions.py  test_validations.py
driftshield/tests/cli/: test_analyze.py  test_batch.py  test_collect_graveyard.py  test_connectors.py  test_discovery.py  test_evaluate_classifier.py  test_evaluate_signatures.py  test_export_validations.py  test_generate_fixtures.py  test_ingest.py  test_inspect.py  test_list.py  test_main.py  test_output.py  test_parsers.py  test_report_command.py  test_report_graveyard.py  test_session_payload.py  test_show_result.py  test_signatures.py  test_submit.py  test_telemetry.py
driftshield/tests/core/: test_canonical_analysis.py  test_delta_records.py  test_deterministic_matching.py  test_models.py  test_provenance_environment.py  test_qualification_state.py  test_visibility.py
driftshield/tests/db/: test_behaviour_service.py  test_connector_watcher.py  test_connectors.py  test_engine.py  test_hosted_schema_sql.py  test_migration_runner.py  test_migrations.py  test_models.py  test_persistence.py  test_persistence_integration.py  test_validation_service.py
driftshield/tests/fixtures/: lineage.py  scenarios.py  test_transcript_generator.py
driftshield/tests/graveyard/: test_classifier.py  test_collector.py  test_collector_reliability.py  test_evaluation.py  test_github_client.py  test_reporting.py
driftshield/tests/integration/: test_real_transcript.py
driftshield/tests/parsers/: test_claude_code.py  test_crewai.py  test_dogfood_golden.py  test_langchain.py  test_local_sources.py  test_normalized_pipeline.py  test_openclaw.py  test_openclaw_trajectory.py
driftshield/tests/reports/: test_builder.py  test_json_export.py  test_markdown.py  test_models.py
(+233 files in other folders)
