[project]
name = "driftshield"
version = "0.1.0"
description = "Open-source AI decision forensics toolkit"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.27",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/driftshield"]
include = [
    "src/driftshield/signatures/packs/*.json",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/driftshield",
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[project.scripts]
driftshield = "driftshield.cli.main:app"
driftshield-api = "driftshield.api.server:main"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "driftshield.api.ingest_workflow",
    "driftshield.api.routes.health",
    "driftshield.api.routes.ingest",
    "driftshield.api.security",
    "driftshield.cli.commands.connectors",
    "driftshield.cli.commands.ingest",
    "driftshield.cli.commands.list",
    "driftshield.cli.commands.report",
    "driftshield.connectors.watcher",
    "driftshield.core.analysis.heuristics",
    "driftshield.core.analysis.risk",
    "driftshield.core.analysis.session",
    "driftshield.core.graph.models",
    "driftshield.core.models",
    "driftshield.db.ingest_service",
    "driftshield.db.migrations.versions.9b3d7e1a4c2f_remove_recurrence_tables_from_oss",
    "driftshield.db.models",
    "driftshield.db.validation_service",
    "driftshield.fixtures.transcript_generator",
    "driftshield.parsers.claude_code",
    "driftshield.parsers.crewai",
    "driftshield.parsers.langchain",
    "driftshield.parsers.local_chat",
    "driftshield.parsers.openclaw",
    "driftshield.signatures.community",
    "tests.fixtures.scenarios",
]
ignore_errors = true
